# ibus-smartpinyin

./: .gitignore  AUTHORS  CLAUDE.md  Containerfile  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  ibus-smartpinyin.spec.in
data/: Makefile.am  com.github.xierongchuan.ibus-smartpinyin.gschema.xml  ibus-setup-smartbopomofo.desktop.in  ibus-setup-smartpinyin.desktop.in  network.txt  smartpinyin.appdata.xml  strokes
data/db/android/: Makefile.am
data/icons/: Makefile.am
docs/: container-testing.md  user-phrase-learning.md
lua/: Makefile.am  lua-ext-console.c  lua-plugin-init.c  lua-plugin.c  lua-plugin.h  test-lua-plugin.c
m4/: Makefile.am
po/: POTFILES.in
setup/: Makefile.am  dicttreeview.py  enginefile.py  keyboardshortcut.py  main2.py  shortcuteditor.py
src/: Makefile.am  PYBus.h  PYConfig.cc  PYConfig.h  PYEditor.cc  PYEditor.h  PYEngine.cc  PYEngine.h  PYEnglishDatabase.cc  PYEnglishDatabase.h  PYEnglishEditor.cc  PYEnglishEditor.h  PYExtEditor.cc  PYExtEditor.h  PYFallbackEditor.cc  PYFallbackEditor.h  PYHalfFullConverter.cc  PYHalfFullConverter.h  PYLibPinyin.cc  PYLibPinyin.h  PYLookupTable.h  PYMain.cc  PYObject.h  PYPBopomofoEditor.cc  PYPBopomofoEditor.h  PYPBopomofoEngine.cc  PYPBopomofoEngine.h  PYPCloudCandidates.cc  PYPCloudCandidates.h  PYPConfig.cc  PYPConfig.h  PYPDoublePinyinEditor.cc  PYPDoublePinyinEditor.h  PYPEmojiCandidates.cc  PYPEmojiCandidates.h  PYPEnglishCandidates.cc  PYPEnglishCandidates.h  PYPEnhancedCandidates.h  PYPFullPinyinEditor.cc  PYPFullPinyinEditor.h  (+44 more)
